c/examples/writing-a-c-compiler-tests/tests/chapter_13/valid/function_calls/return_double.c
/* Test that we follow the calling convention for a double return type */
double d(void) {
    return 1234.e75;
}

int main(void) {
    double retval = d();
    return retval == 1234.e75;
}