c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/compound_mod_2.c
// Can't apply %= to a double
int main(void) {
    int i = 5;
    i %= 1.0;
    return i;
}